20251119/108-lb-asg-lt.tf
resource "aws_lb" "front-end" {
  name               = "lb-front-end"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id]
  subnets = [
    aws_subnet.public-us-east-2a.id,
    aws_subnet.public-us-east-2b.id,
    aws_subnet.public-us-east-2c.id
  ]
  ip_address_type = "ipv4"

}

resource "aws_lb_listener" "front-end" {
  load_balancer_arn = aws_lb.front-end.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.front-end.arn
  }
}


resource "aws_lb_target_group" "front-end" {
  name        = "tg-front-end"
  target_type = "instance"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main-us-east-2.id

  health_check {
    interval            = 10
    timeout             = 5
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 3
    unhealthy_threshold = 3
  }
}

resource "aws_autoscaling_group" "front-end" {
  name = "asg-front-end"
  # availability_zones        = ["us-east-2a"] # used default VPC, conflicts with vpc_zone_identifier
  min_size                  = 3
  max_size                  = 6
  desired_capacity          = 3
  health_check_grace_period = 300
  health_check_type         = "ELB"
  force_delete              = true
  vpc_zone_identifier = [
    aws_subnet.private-us-east-2a.id,
    aws_subnet.private-us-east-2b.id,
    aws_subnet.private-us-east-2c.id
  ]
  target_group_arns = [aws_lb_target_group.front-end.arn]

  launch_template {
    id      = aws_launch_template.ec2-linux-private.id
    version = aws_launch_template.ec2-linux-private.latest_version
  }
}

# Auto Scaling Policy
resource "aws_autoscaling_policy" "frontend_scaling_policy" {
  name                   = "frontend-cpu-target"
  autoscaling_group_name = aws_autoscaling_group.front-end.name

  policy_type               = "TargetTrackingScaling"
  estimated_instance_warmup = 120

  target_tracking_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ASGAverageCPUUtilization"
    }
    #target_value = 75.0
    target_value = 50.0
  }
}

# Enabling instance scale-in protection
resource "aws_autoscaling_attachment" "app1_asg_attachment" {
  autoscaling_group_name = aws_autoscaling_group.front-end.name
  lb_target_group_arn    = aws_lb_target_group.front-end.arn
}

#-----------------------------------------------------------------------------------------
# Launch Template
#-----------------------------------------------------------------------------------------
resource "aws_launch_template" "ec2-linux-private" {
  description             = "lt-for-asg"
  disable_api_stop        = true
  disable_api_termination = true
  image_id                = data.aws_ami.amazon_linux_2.image_id
  instance_type           = "t2.micro"
  key_name                = aws_key_pair.linux.key_name
  name_prefix             = "lt-for-asg-"
  region                  = "us-east-2"
  tags                    = {}
  tags_all                = {}
  # user_data               = "IyEvYmluL2Jhc2gKIyBVc2UgdGhpcyBmb3IgeW91ciB1c2VyIGRhdGEgKHNjcmlwdCBmcm9tIHRvcCB0byBib3R0b20pCiMgaW5zdGFsbCBodHRwZCAoTGludXggMiB2ZXJzaW9uKQp5dW0gdXBkYXRlIC15Cnl1bSBpbnN0YWxsIC15IGh0dHBkCnN5c3RlbWN0bCBzdGFydCBodHRwZApzeXN0ZW1jdGwgZW5hYmxlIGh0dHBkCgojIEdldCB0aGUgSU1EU3YyIHRva2VuClRPS0VOPSQoY3VybCAtWCBQVVQgImh0dHA6Ly8xNjkuMjU0LjE2OS4yNTQvbGF0ZXN0L2FwaS90b2tlbiIgLUggIlgtYXdzLWVjMi1tZXRhZGF0YS10b2tlbi10dGwtc2Vjb25kczogMjE2MDAiKQoKIyBCYWNrZ3JvdW5kIHRoZSBjdXJsIHJlcXVlc3RzC [...]
  user_data = filebase64("user_data_ec2_linux-private.sh")

  # capacity_reservation_specification {
  #   capacity_reservation_preference = "open"
  # }

  # credit_specification {
  #   cpu_credits = "standard"
  # }

  # enclave_options {
  #   enabled = false
  # }

  # maintenance_options {
  #   auto_recovery = "default"
  # }

  # metadata_options {
  #   http_endpoint               = "enabled"
  #   http_protocol_ipv6          = "disabled"
  #   http_put_response_hop_limit = 2
  #   http_tokens                 = "required"
  #   instance_metadata_tags      = "disabled"
  # }

  # monitoring {
  #   enabled = false
  # }

  # I need this to prevent automatic creation of public EIPs
  # network_interfaces {
  #   associate_public_ip_address = false
  #   delete_on_termination       = true
  #   device_index                = 0
  #   security_groups             = [aws_security_group.lb-tg-ec2.id, aws_security_group.ssh.id]
  # }

  vpc_security_group_ids = [aws_security_group.lb-tg-ec2.id, aws_security_group.ssh.id]


  # private_dns_name_options {
  #   enable_resource_name_dns_a_record    = false
  #   enable_resource_name_dns_aaaa_record = false
  #   hostname_type                        = "ip-name"
  # }

  tag_specifications {
    resource_type = "instance"
    tags = {
      "Company"      = "LHJ"
      "LeadEngineer" = "Lonnie Hodges"
      "Name"         = "asg-launched-private-linux-ec2"
    }
  }
}
